--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-Tesks</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="tela"></div>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/jsx">
+        var site = document.getElementById("tela");
+        var root = ReactDOM.createRoot(tela);
+        function BodyTesks(){
+            return (
+                <div id="blocoAgenda">
+                    <div id="cabeca">
+                        <div id="contador">
+                            <strong>
+                                0
+                            </strong>
+                        </div>
+                        <div id="titulo">
+                            <strong>
+                                TESKS OF THE DAY
+                            </strong>
+                        </div>
+                        <div id="addTesk">
+                            <strong>
+                                +
+                            </strong>
+                        </div>
+                    </div>
+                </div>
+            )
+        }
+        root.render(<BodyTesks />);
+    </script>
 </body>
 </html>
