Construção da base React

--- a/index.html
+++ b/index.html
@@ -35,14 +35,26 @@
                                 </strong>
                             </div>
                         </div>
-                        <div class="estruturaTesk">
-                        
-                        </div>
                     </div>
                 </>
             )
         }
-        root.render(<BodyTesks />);
+        function NewTesk(propt) {
+            return (
+                <>
+                    dsdsa
+                </>
+            )
+        }
+        function App(){
+            return (
+                <>
+                    <BodyTesks />
+                    <NewTesk />
+                </>
+            )
+        }
+        root.render(<App />);
     </script>
 </body>
 </html>
